--- a/Trainings/agile-scrum.html
+++ b/Trainings/agile-scrum.html
@@ -1,6 +1,6 @@
 ---
 layout: traininglayout
-title: Scrum Training
+title: Agile-Scrum Training
 description: Scrum Framework Trainings trained by professional instructors who are working professionals or certified scrum trainers (CSTs)
 ---
 <!-- services-area -->
@@ -12,9 +12,9 @@ description: Scrum Framework Trainings trained by professional instructors who a
                 <div class="sidebar-link grey-bg">
                     <h3>Agile Trainings</h3>
                     <ul>
-                        <li><a href="#">Agile-Scrum Training</a></li>
-                        <li><a href="{{site.baseurl}}/Trainings/leading-safe">Certified Scrum Master</a></li>
-                        <li><a href="{{site.baseurl}}/pages/agileconsulting">Certified Scrum Product Owner</a></li>
+                        <li><a href="{{site.baseurl}}/Trainings/agile-scrum">Agile-Scrum Training</a></li>
+                        <li><a href="{{site.baseurl}}/Trainings/certified-scrum-master">Certified Scrum Master</a></li>
+                        <li><a href="{{site.baseurl}}/Trainings/certified-scrum-product-owner">Certified Scrum Product Owner</a></li>
                     </ul>
                 </div>
             </div>
@@ -28,15 +28,15 @@ description: Scrum Framework Trainings trained by professional instructors who a
                     <div class="service-details mb-40">
                         <!-- <img class="mb-30" src="{{site.baseurl}}/assets/img/service/details/sevice-details.jpg" alt=""> -->
                         <h3>Agile-Scrum Training</h3>
-                        Agile development encourages continuous inspect and adapt cycles referred as Sprints and encompasses frameworks such as Scrum and Kanban. Agile provides teams and business with rapid development process aligned to quickly respond to change. Product development goes through an evolution process requiring self-organizing cross-functional teams. <br><br> Although conceptually Agile seems simpler, It often takes some time for many teams to adjust to Agile way of working, but once they master it, they’re often capable of churning out products with speed and quality.
+                        Agile development encourages continuous inspect and adapt cycles referred as Sprints and encompasses frameworks such as Scrum and Kanban. Agile provides teams and business with rapid development process aligned to quickly respond to change. Product development goes through an evolution process requiring self-organizing cross-functional teams. <br><br> Although conceptually Agile seems simpler, It often takes some time for many teams to adjust to Agile way of working, but once they master it, they’re often capable of churning out products with great speed and quality.
 
                     </div>
                     <div class="row">
                         <div class="col-md-12">
                             <div class="service-details mb-40">
-                                <h3>Why get trained in Agile Methods</h3>
-                                The vast majority of those who heavily leverage Agile skillsets in their jobs have a bachelor’s degree; this isn’t the kind of skills cluster that demands a hyper-advanced education. <br><br>
-                                Also, take a look at the tech professions that heavily leverage Agile skills; if you’re interested in one of these, changes are good you’ll need to know some Agile fundamentals.<br><br>
+                                <h3>Learning Objectives</h3>
+                                <br><br>
+
                                    <blockquote class="blockquote single-quote">
                                      <p>According to Burning Glass, which collects and analyzes millions of job postings from across the country, jobs that involve Agile development skills will grow 7.3 percent over the next 10 years; the median agile project management salary is $103,000.</p>
                                    </blockquote>
@@ -51,12 +51,14 @@ description: Scrum Framework Trainings trained by professional instructors who a
                         </div>
                         <div class="col-xl-6 col-lg-12">
                             <div class="service-details mb-40">
-                                <h3>Some of the Benefits of Agile</h3>
-                                - Better alignment of Business and IT <br>
-                                - Improved collaboration <br>
-                                - Faster time to market <br>
-                                - Better Quality of products <br>
-                                - Value based Delivery
+                                <h3>Who can attend this training?</h3><br>
+
+                                <h3>What do I Get at the end of the course?</h3><br>
+
+                                <h3>Is this certified by Scrum Alliance?</h3><br>
+                                This is NOT a certified course from Scrum Alliance. <br>
+                                If you are interested in certification, please check our CSM course -
+                                <a href="{{site.baseurl}}/Trainings/certified-scrum-master">Certified Scrum Master</a>
                             </div>
                         </div>
                     </div>
