--- a/Trainings/trainings.html
+++ b/Trainings/trainings.html
@@ -16,7 +16,7 @@ title: Trainings
                         <li><a href="{{site.baseurl}}/Trainings/SAFe-Scrum-Master">SAFe Scrum Master</a></li>
                         <li><a href="{{site.baseurl}}/Trainings/PMI-DALSM">PMI-DA Lean Scrum Master</a></li>
                         <li><a href="{{site.baseurl}}/Trainings/Agile-Jira">Agile & Jira</a></li>
-                        <li><a href="{{site.baseurl}}/Trainings/CSM">Certified Scrum Master</a></li>
+                        <li><a href="{{site.baseurl}}/Trainings/certified-scrum-master">Certified Scrum Master</a></li>
                     </ul>
                 </div>
             </div>
